--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
+import PostHog from "../components/posthog.astro";
 import "../styles/global.css";
 
 interface Props {
@@ -22,6 +23,7 @@ const currentPath = new URL(Astro.request.url).pathname;
     <title>
       {currentPath == "/" ? title : title + " | Shriram Khandbahale"}
     </title>
+    <PostHog />
   </head>
   <body
     class="mx-5 md:mx-20 lg:mx-[20%] my-10 md:my-20 bg-[#F5F5F5] lg:text-xl"
