--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -26,7 +26,7 @@ const {
   authors = [],
   tags = [],
   banner,
-  siteName = 'shriram.dev',
+  siteName = 'Shriram Khandbahale',
 } = Astro.props as Props
 
 const {
