fix favicon path

--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -91,7 +91,7 @@ const articleSchema = isArticle
 <meta name="googlebot" content="index,follow" />
 
 <meta name="theme-color" content="#f5f5f5" />
-<link rel="icon" href="/favicon.ico" />
+<link rel="icon" href="/favicon.svg" />
 
 <link rel="sitemap" href="/sitemap-index.xml" />
 
